@@ -1,4 +1,21 @@
 # coding=utf-8
+
+WX         = 'wx'
+ALIPAY     = 'alipay'
+WX_PUB     = 'wx_pub'
+ALIPAY_WAP = 'alipay_wap'
+UPMP_WAP   = 'upmp_wap'
+WALLET     = 'wallet'
+
+CHANNEL_CHOICES = (
+    (WALLET,u'小鹿钱包'),
+    (WX,u'微信APP'),
+    (ALIPAY,u'支付宝APP'),
+    (WX_PUB,u'微支付'),
+    (ALIPAY_WAP,u'支付宝'),
+    (UPMP_WAP,u'银联'),
+)
+
 MALL_LOGIN_URL = '/pages/denglu.html'
 MAIL_PAY_SUCCESS_URL = '/pages/zhifucg.html'
 MAIL_PAY_CANCEL_URL = '/pages/zhifucg.html'
