@@ -11,7 +11,8 @@ from flashsale.pay.signals import signal_saletrade_refund_post
 import math
 
 
-def save_Other_Atriibut(order=None, sale_refund=None, refund_num=None, reason=None, desc=None,
+def save_Other_Atriibut(order=None, sale_refund=None, refund_num=None, 
+                        reason=None, desc=None, channel=None,
                         good_status=None, proof_pic=None):
     sale_refund.buyer_id = order.sale_trade.buyer_id
     sale_refund.title = order.title
@@ -25,18 +26,17 @@ def save_Other_Atriibut(order=None, sale_refund=None, refund_num=None, reason=No
     sale_refund.phone = order.sale_trade.receiver_phone
     sale_refund.total_fee = order.total_fee
     sale_refund.payment = order.payment
+    sale_refund.chanel = channel
     sale_refund.refund_fee = order.refund_fee
     sale_refund.reason = REFUND_REASON[reason][1]  # 填写原因
     sale_refund.desc = desc
     sale_refund.good_status = good_status  # 退货状态
     sale_refund.proof_pic = proof_pic  # 保存 佐证图片
-    update_model_fields(sale_refund,
-                        update_fields=['buyer_id', 'title', 'charge', 'item_id', 'sku_id', 'sku_name', 'refund_num',
-                                       'buyer_nick', 'mobile', 'phone', 'total_fee', 'payment', 'refund_fee', 'reason',
-                                       'desc', 'good_status', 'proof_pic'])
+    sale_refund.save()
 
 
-def common_Handler(customer=None, order=None, reason=None, num=None, refund_fee=None, desc=None, refund_type=None,
+def common_Handler(customer=None, order=None, reason=None, num=None, 
+                   refund_fee=None, desc=None, refund_type=None,
                    modify=None, proof_pic=None):
     if num == 0 or None:  # 提交的退款产品数量为0
         raise exceptions.APIException(u'退货数量为0')
@@ -45,7 +45,8 @@ def common_Handler(customer=None, order=None, reason=None, num=None, refund_fee=
     # 退款处理　生成退款单
     if refund_fee > (order.payment / order.num) * num:  # 退款金额不能大于 单价乘以退款数量
         raise exceptions.APIException(u'退货金额大于实付款')
-    sale_refund, state = SaleRefund.objects.get_or_create(trade_id=order.sale_trade.id, order_id=order.id)
+    sale_trade = order.sale_trade
+    sale_refund, state = SaleRefund.objects.get_or_create(trade_id=sale_trade.id, order_id=order.id)
     if state:
         # 如果state 为真　则是第一次创建
         order.refund_id = sale_refund.id  # refund_id
@@ -54,7 +55,8 @@ def common_Handler(customer=None, order=None, reason=None, num=None, refund_fee=
         update_model_fields(order, update_fields=['refund_id', 'refund_fee', 'refund_status'])
         log_action(customer, order, CHANGE, u'用户售后提交申请时修改order信息！')
         # 保存其他信息到 sale_refund
-        save_Other_Atriibut(order=order, sale_refund=sale_refund, refund_num=num, good_status=refund_type,
+        save_Other_Atriibut(order=order, sale_refund=sale_refund, refund_num=num,
+                            good_status=refund_type,channel= sale_trade.channel,
                             reason=reason, desc=desc, proof_pic=proof_pic)
         log_action(customer, sale_refund, ADDITION, u'用户售后增加退货款单信息！')
         # 发送信号退款
@@ -63,8 +65,8 @@ def common_Handler(customer=None, order=None, reason=None, num=None, refund_fee=
     elif modify == 1 and state is False:  # 有退款单
         # 修改该订单的
         if sale_refund.status in (
-                SaleRefund.REFUND_SUCCESS, SaleRefund.REFUND_WAIT_RETURN_GOODS, SaleRefund.REFUND_APPROVE,
-                SaleRefund.REFUND_CLOSED):  # 退款成功 等待返款 同意退款 退款关闭  之后不允许修改
+                SaleRefund.REFUND_SUCCESS, SaleRefund.REFUND_WAIT_RETURN_GOODS, 
+                SaleRefund.REFUND_APPROVE, SaleRefund.REFUND_CLOSED):  # 退款成功 等待返款 同意退款 退款关闭  之后不允许修改
             raise exceptions.APIException(u'退款已被受理或关闭,不予用户自行修改')
         order.refund_fee = refund_fee
         order.refund_status = SaleRefund.REFUND_WAIT_SELLER_AGREE  # 修改该到提交申请状态
@@ -73,8 +75,8 @@ def common_Handler(customer=None, order=None, reason=None, num=None, refund_fee=
         sale_refund.status = SaleRefund.REFUND_WAIT_SELLER_AGREE
         update_model_fields(sale_refund, update_fields=['status'])
         # 保存其他信息到sale_refund
-        save_Other_Atriibut(order=order, sale_refund=sale_refund, refund_num=num, good_status=refund_type,
-                            reason=reason, desc=desc)
+        save_Other_Atriibut(order=order, sale_refund=sale_refund, refund_num=num,
+                            good_status=refund_type, reason=reason, desc=desc)
         pushTradeRefundTask(sale_refund.id)
 
 
